@@ -52,7 +52,8 @@ private:
     void processAccountCreate(const Atlas::Objects::Operation::Create& cr);
     void processOOGLook(const Atlas::Objects::Operation::Look& lk);
     void processAnonymousGet(const Atlas::Objects::Operation::Get& get);
-
+    void processTalk(const Atlas::Objects::Operation::Talk& tk);
+    
     void activateCharacter(const std::string& charId, const Atlas::Objects::Operation::RootOperation& op);
     
     void processIG(const Atlas::Objects::Operation::RootOperation& op);
